--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,27 @@
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>9.2.3.v20140905</version>
             </plugin>
+            <plugin>
+            	<groupId>org.apache.maven.plugins</groupId>
+            	<artifactId>maven-dependancy-plugin</artifactId>
+            	<version>2.3</version>
+            	<executions>
+            		<execution>
+            			<phase>package</phase>
+            			<goals><goal>copy</goal></goals>
+            			<configuration>
+            				<artifactItems>
+            					<artifactItem>
+            						<groupID>org.eclipse.jetty</groupID>
+            						<artifactID>jetty-runner</artifactID>
+            						<version>9.4.0.v20161208</version>
+            						<destFileName>jetty-runner.jar</destFileName>
+            					</artifactItem>
+            				</artifactItems>
+            			</configuration>
+            		</execution>
+            	</executions>
+            </plugin>
         </plugins>
     </build>
 </project>
